# auto_iteration

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  ORCHESTRATOR_USAGE.md  README.md  audio_collector.py  ci-requirements.txt  conftest.py  convert_labels.py  converter.py  dataset_manager.py  dep_size.py  docker-compose.gpu.yml  evaluator.py  gen_pseudo_labels.sh  labeler.py  logging_utils.py  lora_env.txt  mysql_embedding_store.py  orchestrator.py  orchestrator_config.json  orchestrator_config.test.json  orchestrator_config_example.json  pytest.ini  requirements.txt  run_training.sh  setup_env.sh  speaker_separator.py  speaker_separator_config.json  speaker_separator_config_example.json  split_audio.py  test.csv  test_1.csv  train_lora.py  trainer.py  validate_model.py  venv.txt  新建空文件
config_template/: orchestrator_config.2x3090.aggressive.json  orchestrator_config.2x3090.stable.json  orchestrator_config.dev.json  orchestrator_config.prod.json  orchestrator_config.test.json  orchestrator_config_example.json
docs/: ORCHESTRATOR_USAGE.md  工程化整改清单.md  工程化规范  工程化规范.txt  故障排查手册.md  架构说明.md  测试说明.md  部署手册.md  验收部署与测试清单.md
orchestrator_core/: cli.py  config_loader.py  config_validation.py  context.py  paths.py  pipeline.py
scripts/: acceptance_smoke.ps1  acceptance_smoke.sh  gen_pseudo_labels.sh  gpu_health_check.py  (+2 more)
speaker_separator_env/: README.md  pyproject.toml  requirements.txt  run_speaker_separator.py  sample_commonvoice_zhcn.py  speaker_separator.py
speaker_separator_env/src/speaker_separator_env/: __init__.py  cli.py  speaker_separator.py
(+59 files in other folders)
